[AB2D-6395] Accessibility fixes (#86)
## 🎫 Ticket

https://jira.cms.gov/browse/AB2D-6395

## 🛠 Changes

Fixes content wrapping issues forcing the page to be too wide on small
or zoomed viewports

## ℹ️ Context

Addresses 508 accessibility

## 🧪 Validation

Manual QA

--- a/sass/_uswds-theme-custom-styles.scss
+++ b/sass/_uswds-theme-custom-styles.scss
@@ -251,4 +251,15 @@ code.language-plaintext.highlighter-rouge, code.inline-code {
    padding-bottom: .125rem;
    padding-right: .5rem;
    padding-left: .5rem;
- }
+   word-wrap: break-word;
+}
+
+a {
+  word-wrap: break-word;
+}
+
+@include at-media-max("mobile-lg") {
+  table {
+    width: 100%
+  }
+}
